fix(FP-3645): Refactor scrollbar block hook

--- a/packages/home/frontend/styles/app.css
+++ b/packages/home/frontend/styles/app.css
@@ -7,6 +7,8 @@
 @import url('./components/quick-search.css');
 
 body {
+  width: 100%;
+
   @apply font-body;
   @apply text-primary-black;
 }
